crates/rskim-core/tests/snapshots/truncation_golden__ts_comments_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_COMMENTS, Language::TypeScript,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
// FIXTURE: TypeScript file with various comment types
// TESTS: Minimal mode comment stripping

/**
// ... (50 lines truncated)
