crates/rskim-core/tests/snapshots/truncation_golden__ts_comments_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_COMMENTS, Language::TypeScript,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
// ... (12 lines truncated)
export function add(x: number, y: number): number  {...}
// ... (11 lines truncated)
export class Calculator {
    private value: number;

    /** Constructor doc (KEEP) */
    constructor(value: number)  {...}

    /**
     * Add method doc (KEEP)
     */
    add(x: number): number  {...}
}
// ... (19 lines truncated)
