crates/rskim-core/tests/snapshots/truncation_golden__ts_comments_structure_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_COMMENTS, Language::TypeScript,\nTransformConfig::with_mode(Mode::Structure))"
---
// FIXTURE: TypeScript file with various comment types
// TESTS: Minimal mode comment stripping

// This is a regular single-line comment (STRIP)
/* This is a regular block comment (STRIP) */

/**
 * This is a JSDoc comment (KEEP)
 * @param x - first number
 * @param y - second number
 * @returns the sum
 */
export function add(x: number, y: number): number  {...}

// Another regular comment (STRIP)
// Multiple lines of regular comments (STRIP)

/**
 * A documented class (KEEP)
 */
export class Calculator {
    private value: number;

    /** Constructor doc (KEEP) */
    constructor(value: number)  {...}

    /**
     * Add method doc (KEEP)
     */
    add(x: number): number  {...}
}

/* Regular block comment at module level (STRIP) */

export interface Config {
    name: string;
    value: number;
}




// Test blank line normalization: there are 4+ blank lines above (normalize to 2)

export const VERSION = "1.0.0";
