crates/rskim-core/tests/snapshots/truncation_golden__ts_simple_pseudo_last10.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_SIMPLE, Language::TypeScript,\nTransformConfig::with_mode(Mode::Pseudo).with_last_lines(10))"
---
// ... (4 lines above)

export function add(a: number, b: number): number {
    return a + b
}

export function greet(name: string): string {
    const message = `Hello, ${name}!`
    return message
}
