crates/rskim-core/tests/snapshots/truncation_golden__ts_simple_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_SIMPLE, Language::TypeScript,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
/**
 * FIXTURE: Simple TypeScript functions
 * TESTS: Basic function signature extraction
 */
// ... (9 lines truncated)
