crates/rskim-core/tests/snapshots/truncation_golden__ts_simple_signatures_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_SIMPLE, Language::TypeScript,\nTransformConfig::with_mode(Mode::Signatures))"
---
function add(a: number, b: number): number
function greet(name: string): string
